Fix weird spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,8 +23,7 @@ h6 {
 }
 
 div.header {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 5px;
 
   align-items: center;
   display: flex;
